--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -316,9 +316,9 @@ p.streak-loss {
     }
 }
 
-.ant-dropdown-menu {
-    padding: 0;
-}
+// .ant-dropdown-menu {
+//     padding: 0;
+// }
 
 .board-container {
     user-select: none;
@@ -1457,7 +1457,7 @@ p.rune {
             font-weight: bold;
             font-size: 12px;
             height: 24px;
-            padding: 0px 12px;
+            // padding: 0px 12px;
             width: 100px;
             line-height: 2.3em;
 
@@ -2127,7 +2127,7 @@ p.rune {
         .ant-dropdown-menu {
             li.ant-dropdown-menu-item {
                 height: 32px;
-                padding: 0px 16px;
+                // padding: 0px 16px;
                 width: 120px;
                 line-height: 2.3em;
 
